# AnkamaLauncherEmulator

./: .gitignore  README.md  init.bat  init.sh  main.py  pyproject.toml  requirements.txt  setup_venv.bat  setup_venv.sh  tokens.py
ankama_launcher_emulator/: __init__.py  consts.py  gui.py  internet_utils.py  redirect.py
ankama_launcher_emulator/decrypter/: crypto_helper.py  device.py
ankama_launcher_emulator/gen_zaap/zaap/: ZaapService-remote  __init__.py
ankama_launcher_emulator/gui/: __init__.py  account_card.py  app.py  consts.py  download_banner.py  game_selector_card.py  main_window.py  star_dialog.py  ui_helpers.py  utils.py
ankama_launcher_emulator/haapi/: haapi.py  zaap_version.py
ankama_launcher_emulator/installation/: cytrus.py  dofus3.py  retro.py
ankama_launcher_emulator/interfaces/: account_game_info.py  deciphered_api_key.py  game_name_enum.py
ankama_launcher_emulator/proxy/: connection_proxy.py  login_message_pb2.py  login_message_pb2.pyi  proxy.py  proxy_listener.py  retro_proxy.py
ankama_launcher_emulator/proxy/dofus3/: connection_proxy.py  proxy_listener.py
ankama_launcher_emulator/proxy/retro/: retro_proxy.py  (+1 more)
ankama_launcher_emulator/server/: handler.py  pending_tracker.py  server.py
ankama_launcher_emulator/utils/: internet.py  proxy.py
resources/: zaap.thrift
src/: consts.py  server.py  tokens.py  utils.py
src/decrypter/: crypto_helper.py
src/haapi/: haapi.py  urls.py  zaap_version.py
src/interfaces/: account_game_info.py  deciphered_api_key.py  deciphered_cert.py
src/models/: account_game_info.py
src/server/: handler.py  server.py
(+12 files in other folders)
