[tool.poetry]
name = "ankama_launcher_emulator"
version = "0.1.0"
description = ""
authors = ["Valentin Alix <valentin-alix.850@outlook.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.11"
requests = "^2.32.3"
thrift = "^0.20.0"
psutil = "^6.0.0"
wmi = "^1.5.1"
pycryptodomex = "^3.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
